# Terramine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  Terramine.sln  asan.log.1152860  build.zig
Debug/: Terramine.ilk
Debug/Debug/Terramine.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog
Debug/GUI/: Button.h  Sprite.h
Debug/Graphics/: LineBatch.h  Shader.h  Skybox.h  Texture.cpp  Texture.h  VoxelRenderer.h
Debug/Graphics/Shaders/: GUIFragment.glsl  GUIVertex.glsl  PPFragment.glsl  PPVertex.glsl  SkyboxFragment.glsl  SkyboxVertex.glsl  fragmentShader.glsl  vertexShader.glsl
Debug/Loaders/: pngLoader.h
Debug/Release/: Terramine.exe.recipe
Debug/Release/Terramine.tlog/: link.read.1.tlog  link.write.1.tlog
Debug/Voxels/: Chunks.cpp  Chunks.h
Debug/src/: textureAtlas.ase
Debug/x64/Debug/Terramine.tlog/: Terramine.lastbuildstate
Debug/x64/Release/Terramine.tlog/: CL.command.1.tlog  link.read.1.tlog
Release/: Terramine.iobj  Terramine.ipdb
Release/Debug/Terramine.tlog/: CL.write.1.tlog
Release/GUI/: GUI.h  Sprite.cpp
Release/Graphics/: LineBatch.cpp  Shader.h
Release/Graphics/Shaders/: fragmentShader.glsl  fragmentShadow.glsl
Release/Release/Terramine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Terramine.lastbuildstate  Terramine.write.1u.tlog  link.command.1.tlog
Release/Voxels/: BlockStore.cpp  Chunk.cpp  Voxel.h
Release/x64/Debug/Terramine.tlog/: CL.write.1.tlog
Release/x64/Release/Terramine.tlog/: CL.read.1.tlog  CL.write.1.tlog  Terramine.lastbuildstate  (+1 more)
Terramine/: Camera.cpp  Camera.h  EventHandler.cpp  EventHandler.h  Mesh.cpp  Mesh.h  Player.cpp  Player.h  Terramine.vcxproj  Terramine.vcxproj.filters  Window.cpp  Window.h  cmp_bmfont.hpp  defines.cpp  indexBuffer.h  main.cpp  packages.config  renderer.cpp  renderer.h  vertexBuffer.cpp
Terramine/Debug/: Terramine.exe.recipe  vc142.idb
Terramine/Debug/Terramine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Terramine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Terramine/GUI/: Button.cpp  DynamicText.h  GUI.cpp  GUI.h  GUIHandler.cpp  GUIHandler.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h
Terramine/Graphics/: FrameBuffer.cpp  FrameBuffer.h  LineBatch.cpp  LineBatch.h  MasterHandler.cpp  MasterHandler.h  SceneHandler.cpp  SceneHandler.h  ShadeowFrameBuffer.cpp  ShadeowFrameBuffer.h  Shader.cpp  Shader.h  ShadowFrameBuffer.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  VoxelRenderer.cpp  VoxelRenderer.h
Terramine/Graphics/Shaders/: GUIFragment.glsl  GUIVertex.glsl  PPFragment.glsl  fragmentShader.glsl  linesVertex.glsl  shadowVertex.glsl  textVertex.glsl  vertexShader.glsl
Terramine/Loaders/: pngLoader.cpp  pngLoader.h
Terramine/Release/Terramine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Terramine.lastbuildstate  Terramine.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Terramine/Shaders/: fragmentShader.glsl  vertexShader.glsl
Terramine/Voxels/: BlockStore.cpp  BlockStore.h  BlockTextures.json  Chunk.cpp  Chunk.h  Chunks.cpp  Chunks.h  Terrarian.cpp  Terrarian.h  Voxel.cpp
Terramine/src/: font.fnt  font2.fnt
Terramine/x64/Debug/: Terramine.exe.recipe  vc142.idb  vc143.idb
assets/: BlockTextures.json  Blocks.json  block_textures.json
assets/Shaders/: PPFragment.glsl  PPVertex.glsl  SkyboxFragment.glsl  linesFragment.glsl  terrain_fragment.glsl  terrain_vertex.glsl  vertexShadow.glsl
assets/data/: block_textures.json  blocks.json
assets/fonts/: debug_font.fnt
assets/shaders/: debug_lines_fragment.glsl  debug_lines_vertex.glsl  gui_fragment.glsl  gui_vertex.glsl  lines_fragment.glsl  lines_vertex.glsl  opaque_terrain_vertex.glsl  postproc_fragment.glsl  postproc_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  terrain_fragment.glsl  terrain_vertex.glsl  text_fragment.glsl  text_vertex.glsl  transparent_terrain_vertex.glsl
cmake/: CPM.cmake
src/: Camera.cpp  Camera.h  EventHandler.cpp  EventHandler.h  Mesh.cpp  Mesh.h  Player.cpp  Player.h  Window.cpp  Window.h  collections.hpp  controls.hpp  data.hpp  debug.hpp  defines.cpp  events.hpp  game.hpp  geometry.hpp  graphics.hpp  gui.hpp  indexBuffer.cpp  indexBuffer.h  loaders.hpp  log.hpp  main.cpp  main_old.cpp  objects.hpp  panic.hpp  parser.hpp  physics.hpp  terrain.hpp  types.hpp  update.hpp  vertexBuffer.cpp  vertexBuffer.h  window.hpp
src/GUI/: Button.cpp  Button.h  GUI.cpp  GUI.h  GUIHandler.cpp  GUIHandler.h  GUIObject.cpp  GUIObject.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h
src/Graphics/: FrameBuffer.cpp  FrameBuffer.h  MasterHandler.cpp  MasterHandler.h  SceneHandler.cpp  SceneHandler.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  VoxelRenderer.cpp  VoxelRenderer.h
src/Graphics/Shaders/: fragmentShader.glsl
src/Loaders/: pngLoader.cpp  pngLoader.h
src/Voxels/: BlockStore.cpp  BlockStore.h  Chunk.cpp  Chunk.h  Chunks.cpp  Chunks.h  Terrarian.cpp  Terrarian.h  Voxel.cpp  Voxel.h
src/collections/: cow_string.cpp
src/controls/: camera.cpp  player.cpp
src/data/: image.cpp
src/debug/: debug.cpp  lines.cpp  text.cpp
src/events/: io.cpp
src/game/: game.cpp
src/geometry/: aabb.cpp
src/graphics/: FrameBuffer.cpp  FrameBuffer.h  LineBatch.cpp  LineBatch.h  MasterHandler.cpp  MasterHandler.h  SceneHandler.cpp  SceneHandler.h  Skybox.cpp  Skybox.h  VoxelRenderer.cpp  VoxelRenderer.h  deferred_renderer.cpp  geometry_buffer.cpp  mesh.cpp  shader.cpp  texture.cpp
src/gui/: button.cpp  gui.cpp  sprite.cpp  text.cpp
src/loaders/: font.cpp  game_objects.cpp  png.cpp  shader.cpp  string.cpp
src/objects/: line_batch.cpp  scene.cpp  selection_box.cpp  skybox.cpp  terrain.cpp
src/parser/: basic.cpp  fnt.cpp
src/physics/: physics.cpp
src/terrain/: chunk.cpp  chunk_array.cpp  renderer.cpp
src/update/: update.cpp
src/window/: window.cpp
tests/: assert.hpp  main.cpp  other.hpp  parse.hpp  util.hpp  vec.cpp  vec.hpp
tests/parse/: basic.cpp  fnt.cpp  parser.cpp
x64/Release/: Terramine.iobj  Terramine.ipdb
(+15 files in other folders)
